cleanup [platform]: obsolete API; quick fixes; typos; formatting
GitOrigin-RevId: 45844521cb08cfb875b5eb4d96e58f792b8474a3